Add Shooting and Ray Casting

--- a/Roboflora/.vscode/settings.json
+++ b/Roboflora/.vscode/settings.json
@@ -56,5 +56,8 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "Roboflora.sln"
+    "dotnet.defaultSolution": "Roboflora.sln",
+    "cSpell.words": [
+        "Raycast"
+    ]
 }
