--- a/Roboflora/Assembly-CSharp.csproj
+++ b/Roboflora/Assembly-CSharp.csproj
@@ -88,6 +88,7 @@
     <Compile Include="Assets\Scripts\HealthBar.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark02.cs" />
     <Compile Include="Assets\Scripts\Weapon\CrosshairTarget.cs" />
+    <Compile Include="Assets\Scripts\Weapon\TriggerSpawnGunImpact.cs" />
     <Compile Include="Assets\Scripts\Weapon\SwitchingWeapon.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\CameraController.cs" />
     <Compile Include="Assets\Scripts\States\AttackState.cs" />
